# ClangSight

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/ast/: ast_misc.cc  ast_misc.h  ast_structs.h  ast_visitor.h  function_declaration_ast_visitor.cc  function_declaration_ast_visitor.h  struct_declaration_ast_visitor.cc  struct_declaration_ast_visitor.h
src/base/: assert.h  logging.h  misc.h  platform.h
src/clangd/: clangd_client.cc  clangd_client.h  clangd_process.cc  clangd_process.h  request_database.cc  request_database.h
src/core/: code_file_iterator.cc  code_file_iterator.h  main.cc  main.h
src/process/: posix_process.cc  posix_process.h  process.h  process_handle.cc  process_handle.h  windows_process.cc  windows_process.h
